--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.1",
     "react-hot-toast": "^2.6.0",
+    "react-select": "^5.10.2",
     "react-webcam": "^7.2.0",
     "signature_pad": "^5.1.2",
     "tailwindcss": "^4.1.17",
+    "vietnam-provinces": "^0.0.4",
     "zod": "^4.1.13"
   },
   "devDependencies": {
